--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,27 @@
 version: '3.9'
 services:
+  api:
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
   db:
     image: mongo
     container_name: mongo
     restart: always
     ports:
-      - 27017:27017
+      - "27017:27017"
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=cloudflare
+    volumes:
+      - ./data/dev/mongo:/data/db
   db-client:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - "8081:8081"
     environment:
       - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
       - ME_CONFIG_BASICAUTH_USERNAME=root
