--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.9'
 services:
-  api:
-    build: .
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
+  # api:
+  #   build: .
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - db
   db:
     image: mongo
     container_name: mongo
